@@ -2,6 +2,9 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+pts-core: Various external dependency updates
+pts-core: Expose NUM_CPU_PHYSICAL_CORES to test profiles as alternative to NUM_CPU_CORES (logical count)
+pts_Graph: Fix for sometimes tick marker text overlapping
 phodevi: Improved physical CPU core detection for architectures like POWER
 phodevi: Improved CPU cache size detection
 
